assets/css/style.css
@import url('https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700|Exo:100,200,300,400,500,600,700');

body {
    font-family: "roboto", sans-serif;
}

a{
    text-decoration: none;
    color:#F17F29
}

a:hover{
    text-decoration: none;
    color:#f1802971;
}

span {
    max-width: 100%;
}

/*Header */
.title {
display: inline-block;
font-family: "Roboto", sans-serif;
text-align: center;
margin-left: 20px;
font-size: 40px;
}

#logolink{
	text-decoration: none;
	color: #F17F29;
}

#logolink:hover{
	opacity: 80%;
}

.ascend {
    font-weight: 500;
}

.gym {
    font-weight: 300;
    margin-left: 0px;
}

.top-bar{
    background-color: #00272B;
    height: 60px;
    border-bottom: 3px;
    border-color:#00000094;
}

#navigation-bar{
	max-width: 200%;
    background-color:#00272B;
}

#nav li{
    color: #F17F29;
    margin: auto;
    margin-top: 15px;
	max-width: 20%;
}

.header-social-links{
    margin-right: 20%;
    margin-left: 20%;
}

/*body */
body {
    background-color: #fafafa;
	overflow-x: hidden;
}

.hero-image{
	width: 100%;
	min-width: 100%;
	margin: auto;
	background-image: url("../images/join-hero.jpg");
	background-size: cover;
	height: 70%;
	max-height: 70%;
}

.hero-container{
    padding-top: 15%;
    text-align:center;
}

.social-media-bar{
margin-top: 15px;
max-height: 15px;
justify-content: center;

}

.hero-message{
    background-color: #00272b8e;
    margin-left: 35%;
    margin-right: 35%;
    margin-bottom: 50px;
}

#hero-logo{
    width: 150%;
}

.btn-secondary{
margin-bottom: 20px;
color: #F17F29;
background-color:#00272ba8;
border-color:#F17F29;
}

.btn-secondary:hover{
    background-color:#00272b;
    color:#ff750b;
    font-weight: 500;
    border-color:#F17F29;
}


#make-change{
    font-size:35px;
    font-weight: 500;
    text-transform: uppercase;
    color:#F17F29;
    }


#interest{
    font-size: 25px;
    font-weight: 300;
    color:#F17F29;
}

.bottom-socials {
    padding-top: 3%;
}

.text-box{
    margin-top: 20px;
}

.text-box{
 padding-top: 130px;
 background-color: #00272b00;
 border-radius: 15px;
 color:#00272B;
}



h3{
    font-weight: 500;
    text-transform: uppercase;
    width: 80%;
}

h4{
    color:#f18029;
    text-align: center;
    margin-top: 7%;
}

h5{
    font-weight: 500;
    text-transform: uppercase;
    width: 100%;
    padding-top: 35px;
}

h6{
    font-weight: 500;
    text-transform: uppercase;
    text-align: center;
    padding-top: 200px;
    padding-bottom: 0px;
    font-size:1.7rem;
}

.page-text{
    width: 80%;
    padding-top: 25px;
    justify-content: center;
}

.page-image{
    width: 80%;
    margin-top: 100px;
    margin-right: 120px;
    justify-content:center;
    border-radius: 20px;
}

iframe{
    width: 60%;
    height: 600px;
    margin-top: 20px;
    margin-left: 20%;
    margin-right: 120px;
    justify-content:center;
    border-radius: 20px;
}

.maincontent-row{
    padding-left: 20%;
    padding-top: 30px;
}
/*footer*/

footer {
    background-color:#00272B;
    max-width: 200%;
    margin-top: 50px;
}

.bottom-item{
    color:#F17F29;
    font-size: 10px;
    padding-left: 10%;
    padding-top: 4%;
}

.footer-telephone,
.footer-address{
    color:#F17F29;
    font-size: 10px;
    line-height: 6px
}

.contact-info-footer{
    padding-top: 17px;
    padding-left: 7%;
}

.signup-form{
    text-align:center;
    background-color:#00272b67;
    margin-top: 50px;
    margin-left: 15%;
    margin-right: 15%;
    color:#F17F29;
    border-radius: 25px;
    justify-content:center;
}

.form-background{
    background-image: url("../images/signup-background-img.jpg");
    margin-left: 20%;
    margin-right: 20%;
    padding-bottom: 20px;
    padding-top: 20px;
    margin-top: 30px;
    margin-bottom: 30px;
    border-radius: 10px;
    border: solid 2px #F17F29;
}

label{
    padding-top: 18px;
    font-size: 1em;
}

input{
    width: 50%;
    border-radius: 20px;
    background-color:#00272bbd;
    color:#F17F29;
    text-align: center;
    border: 1px #F17F29 solid;
}

input[type=text],
input[type=email],
input[type=date],
input[type=tel] {
height: 35px;
}

input:focus {
    border: 4px #F17F29 solid;
}

input[type=checkbox]{
    width:min-content;
    cursor: pointer;
}

input[type=submit]{
    width:min-content;
    margin-bottom: 15px;
}

input[type=submit]:hover{
    background-color:#00272B;
    font-weight: 550;
    cursor:pointer;
}

.classes{
    margin-top: 50px;
    background-image:url("../images/join-hero.jpg");
    height:auto;
}

.class-child{
    background-color:#00272bb4;
    height: 450px;
    width: 300px;
    margin-top: 5%;
    margin-bottom: 5%;
    margin-left: 3px;
    margin-right: 3px;
    object-fit: cover;
    

}

.contact-child{
    background-color:#00272bb4;
    height: 600px;
    width: 45%;
    margin-top: 5%;
    margin-bottom: 5%;
    margin-left: 3px;
    margin-right: 3px;
    object-fit: cover;
}

#fa:hover{
    color:#f1802983;
}

.classrow{
    display:flex;
    margin: auto;
    width: 80%;
    justify-content:center;
}

.class-text{
    color:#F17F29;
    text-align: center;
    font-size: 18px;
    margin-top: 30px;
    font-weight: 300;
}

.open-text{
    color:#F17F29;
    text-align: center;
    font-size: 18px;
    margin-top: 30px;
    font-weight: 300;
}


.class-icon{
    color:#F17F29;
    padding-left: 33%;
    padding-right: 35%;
    padding-top: 50px;
    font-size: 55px;
}

.class-icon2{
    color:#F17F29;
    padding-left: 37%;
    padding-right: 35%;
    padding-top: 50px;
    font-size: 55px;
}

.contact-symbol{
    color:#F17F29;
    font-size: 40px;
}

.get-in-touch{
    color:#F17F29;
    padding-top: 28px;
    padding-bottom: 58px;
    font-weight: 300;
    padding-left: 20px;
    padding-right: 20px;
    font-size: 1rem;
}

/*media queries */
@media only screen and (max-width: 576px){
h1 {
font-size: 1.7em;
text-align: center;
}

#navigation-bar{
    padding-bottom: 125px;
}



}

@media only screen and (max-width: 982px){
    #navigation-bar{
        padding-bottom: 125px;
    }

    .hero-message{
        margin-left: 20%;
        margin-right: 20%;
    }

    .contact-info-footer{
        text-align: center;
    }

    .signup-form{
        margin-top: 50px;
        margin-left: 5%;
        margin-right: 5%;
    }
    
    .form-background{
        background-image: url("../images/signup-background-img.jpg");
        margin-left: 5%;
        margin-right: 5%;
        padding-bottom: 20px;
        padding-top: 20px;
        margin-top: 30px;
        margin-bottom: 30px;
        border-radius: 10px;
        border: solid 2px #F17F29;
    }

    input{
        width:95%;
    }

    .contact-child{
        height: 600px;
        width: 100%
    }
    
    .get-in-touch{
        font-size: 15px;
    }

    .open-text{
        color:#F17F29;
        text-align: center;
        font-size: 15px;
        margin-top: 35px;
        font-weight: 300;
    }

}

@media(max-width: 320px){ 
    

h3{
    font-size: 18px;
}

.bottom-item a{
    font-size: 8px !important;
}

.bottom-socials{
    font-size: 10px;
    padding-top: 40%;
}

.footer-address,
.footer-telephone {
    font-size: 8px;
}

body{
    font-size: 12px;
}

#make-change{
    font-size: 25px;
}
  }

